Feat: add More panel help and site card
Add an in-game help section and a shareable site URL card in the More panel with copy/open actions.

Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -246,6 +246,29 @@
                 <input id="panelSfxVol" type="range" min="0" max="100" value="70" />
               </label>
             </div>
+
+            <div class="menu__section">
+              <div class="menu__sectionTitle">說明</div>
+              <div id="moreHelp" class="menu__sub">
+                - 平板：左下搖桿移動、右邊滑動轉視角、右下按鈕（跳/攻/放/M）。<br />
+                - 電腦：WASD 移動、空白跳、滑鼠轉視角、左鍵攻擊/破壞、右鍵放置、M 開關側邊欄。<br />
+                - 槍戰：1v1 回合制；九十九夜：晚上怪物會攻擊，銀火結界內安全。<br />
+                - 連線：到「隊伍」→ 連線（P2P）依序貼 Offer/Answer。<br />
+                - VIP：登入後商店免費（本機記錄）。
+              </div>
+            </div>
+
+            <div class="menu__section">
+              <div class="menu__sectionTitle">王紙（網站）</div>
+              <div class="menu__sub">這就是你這個遊戲的網址，分享給朋友就能直接開啟。</div>
+              <div class="menu__row">
+                <input id="siteUrl" class="textinput" type="text" readonly />
+                <button id="copySiteUrlBtn" class="btn btn--small" type="button">複製</button>
+                <button id="openSiteUrlBtn" class="btn btn--small btn--primary" type="button">開啟</button>
+              </div>
+              <div class="menu__hint muted">提示：如果你是 GitHub Pages，通常會長得像：stevegameworld.github.io/Bound/</div>
+            </div>
+
             <div class="menu__section">
               <div class="menu__sectionTitle">VIP</div>
               <div class="menu__sub">輸入 VIP 代碼登入後，虛擬人偶商店全部免費（本機）。</div>
