Feat: add Paper (independent site) page
Add a standalone /paper/ website (王紙) and update the More panel button/link to open it.

Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
             </div>
 
             <div class="menu__section">
-              <div class="menu__sectionTitle">王紙（網站）</div>
-              <div class="menu__sub">這就是你這個遊戲的網址，分享給朋友就能直接開啟。</div>
+              <div class="menu__sectionTitle">王紙</div>
+              <div class="menu__sub">像 Roblox 一樣：點「進入王紙」會開啟一個獨立網站頁（你這款遊戲的介紹/入口）。</div>
               <div class="menu__row">
                 <input id="siteUrl" class="textinput" type="text" readonly />
                 <button id="copySiteUrlBtn" class="btn btn--small" type="button">複製</button>
-                <button id="openSiteUrlBtn" class="btn btn--small btn--primary" type="button">開啟</button>
+                <button id="openSiteUrlBtn" class="btn btn--small btn--primary" type="button">進入王紙</button>
               </div>
-              <div class="menu__hint muted">提示：如果你是 GitHub Pages，通常會長得像：stevegameworld.github.io/Bound/</div>
+              <div class="menu__hint muted">這個連結就是王紙網址（可分享給朋友）。</div>
             </div>
 
             <div class="menu__section">
